  DatabaseConnectionImpl.checkConnectionStatement field removed
  EntityImpl.entityInstance() changed into a constructor
  ValueMap.ToString interface removed, superfluous
  EntityPanel no longer constructs a default EntityTablePanel in case the one received via the constructor is null
  EntityTablePanel.tableDoubleClickedEvent was never fired
  DatabaseUtil.DatabaseStatistics moved back to Databases, now package protected, no need for a backwards incompatible change, barely cosmetic
  Control.doSetMnemonic() added protected
  ToggleControl overrides doSetMnemonic() in order to set the mnemonic in the associated button model as well
  Control.getMnemonic() now returns -1 in case no mnemonic is specified, instead of throwing a NullPointerException
  Configuration.DISPOSE_EDIT_DIALOG_ON_ESCAPE added, used in EntityEditPanel
  EntityTableCellRenderer.indicateSearch field added
  EntityTableCellRenderer.tooltipData field added
  ServerUtil.getServers() logging improved
  ServerUtil.initializeRegistry() no longer logs an error when no registry is found during startup
  Startup error message improved a bit
  EntityTableCellRenderer removed and EntityTableCellRenderers added
  EntityTableCellRenderers, renderer no longer uses hard coded search indicator colors
  EntityTableCellRenderers, rendering of boolean columns fixed with setOpaque(true) (java bug workaround)
  EntityTablePanel.initializeTableCellRenderer() now takes a Property parameter
  PropertySummaryModel.locked field added, DefaultPropertySummaryModel disables the changing of summary type if locked
  PropertySummaryPanel only displays popup menu if the model is not locked
  PropertySummaryModel.getValueProvider() added
  PropertySummaryModel.PropertyValueProvider.useValueSubset field added, implemented in DefaultPropertySummaryModel
  EntityUiUtil.initializeTextField() now sets the allowed range for numerical properties with min and max defined