@@ -3570,3 +3570,4 @@
   PropertySummaryModel.getValueProvider() added
   PropertySummaryModel.PropertyValueProvider.useValueSubset field added, implemented in DefaultPropertySummaryModel
   EntityUiUtil.initializeTextField() now sets the allowed range for numerical properties with min and max defined
+  EntityEditPanel now shows the entity menu on ctrl-alt-V
